--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "firebase": "^9.20.0",
+    "firebaseui": "^6.0.2",
     "headlessui": "^0.0.0",
     "heroicons": "^2.0.17",
+    "js-cookie": "^3.0.5",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   }
