--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@excalidraw/excalidraw": "^0.15.2",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@mantine/core": "^6.0.9",
     "@mantine/hooks": "^6.0.9",
     "@mantine/tiptap": "^6.0.9",
+    "@next/font": "^13.3.1",
     "@tabler/icons-react": "^2.17.0",
     "@tiptap/extension-highlight": "^2.0.3",
     "@tiptap/extension-link": "^2.0.3",
@@ -37,8 +39,8 @@
     "js-cookie": "^3.0.5",
     "next": "13.3.1",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
