--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "react-firebase-hooks": "^5.1.1",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3"
   }
 }
