--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
     "autoprefixer": "10.4.14",
-    "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "firebase": "^9.20.0",
     "firebaseui": "^6.0.2",
@@ -43,9 +42,20 @@
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "typescript-eslint-parser": "^22.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.3"
+    "@microsoft/eslint-formatter-sarif": "^3.0.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "eslint": "^8.39.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-typescript": "^0.14.0",
+    "typescript": "^5.0.4"
   }
 }
