--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/core": "^6.0.9",
     "@mantine/hooks": "^6.0.9",
     "@mantine/tiptap": "^6.0.9",
+    "@material-tailwind/react": "^2.0.1",
     "@next/font": "^13.3.1",
     "@tabler/icons-react": "^2.17.0",
     "@tiptap/extension-highlight": "^2.0.3",
