--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "heroicons": "^2.0.17",
     "js-cookie": "^3.0.5",
     "next": "13.3.1",
+    "openai": "^3.2.1",
     "postcss": "8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "tabler-icons-react": "^1.56.0",
     "tailwindcss": "3.3.1",
     "typescript-eslint-parser": "^22.0.0"
   },
