--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-no-ssr": "^1.1.0",
     "tabler-icons-react": "^1.56.0",
     "tailwindcss": "3.3.1",
     "typescript-eslint-parser": "^22.0.0"
