--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "lib/firebase/initFirebase.js", "src/pages/auth.js", "src/pages/index.jsx", "src/pages/notebook.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "lib/firebase/initFirebase.js", "src/pages/auth.js", "src/pages/index.jsx", "src/pages/notebook.js", "src/pages/_app.jsx"],
   "exclude": ["node_modules"]
 }
